sandc/test/fixtures/pbtRegression/shouldSucceed/explicitShadowing/use/localVarDeclaration/LocVarDec.sand
pub class LocVarDec {
    pub foo() {
        let! LocVarDec = 0int;
        re! true = false;
    }
}