sandc/test/fixtures/pbtRegression/shouldFail/implicitShadowing/forBinding/singleBinding/SingleBinding.sand
pub class SingleBinding {
    foo() {
        let i = 0;
        for i in 0..9 {
            
        }
    }
}